force-app/main/default/objects/Referral_Account__c/Referral_Account__c.object-meta.xml
<CustomObject>
    <description>Referral Source Company Information</description>
    <label>Referral Account</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Referral Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Referral Accounts</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>