force-app/main/default/objects/Referral_Account__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The matching account to this Referral Account</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Referral Accounts (Account)</relationshipLabel>
    <relationshipName>ReferralAccounts</relationshipName>
    <type>Lookup</type>
</CustomField>