force-app/main/default/objects/Referral_Account__c/fields/Acquisition_Discussion_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Acquisition_Discussion_Outcome__c</fullName>
    <description>Used for executive reporting on Acquisition Pipeline</description>
    <inlineHelpText>Selection determines the categorization for future strategic outreach and tracking</inlineHelpText>
    <label>Acquisition Discussion Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Interested</fullName>
            </value>
            <value>
                <fullName>Not Interested At This Time</fullName>
            </value>
            <value>
                <fullName>Requested Future Follow Up</fullName>
            </value>
            <value>
                <fullName>Proprietary Software</fullName>
            </value>
            <value>
                <fullName>Too Industry Specific</fullName>
            </value>
            <value>
                <fullName>Bad Experience with Paychex</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>