force-app/main/default/objects/Referral_Account__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The referral account address</inlineHelpText>
    <label>Address</label>
    <type>Address</type>
</CustomField>