force-app/main/default/objects/Referral_Account__c/fields/AP_Coding__c.field-meta.xml
<CustomField>
    <fullName>AP_Coding__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>AP Coding</label>
    <length>24</length>
    <type>Text</type>
</CustomField>