force-app/main/default/objects/Referral_Account__c/fields/Bank_Branch_Number__c.field-meta.xml
<CustomField>
    <fullName>Bank_Branch_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Bank Branch Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>