force-app/main/default/objects/Referral_Account__c/fields/Bank_Centric_Rep_401k__c.field-meta.xml
<CustomField>
    <fullName>Bank_Centric_Rep_401k__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Specific rep, different than the territory rep, specifically assigned to work with this bank.</description>
    <label>401k Bank Centric Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Referral_Accounts9</relationshipName>
    <type>Lookup</type>
</CustomField>