force-app/main/default/objects/Referral_Account__c/fields/Bank_Referral_Fee__c.field-meta.xml
<CustomField>
    <fullName>Bank_Referral_Fee__c</fullName>
    <description>Entered by Corporate Commissions to calculate payment to bank on referrals</description>
    <inlineHelpText>the dollar amount outlined as the standard within the contract for referrals</inlineHelpText>
    <label>Referral Payment $ Amount</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>