force-app/main/default/objects/Referral_Account__c/fields/Bank_Revenue_Percent__c.field-meta.xml
<CustomField>
    <fullName>Bank_Revenue_Percent__c</fullName>
    <description>Entered by Corporate Commissions to calculate payment to bank on referrals</description>
    <inlineHelpText>the % outlined as the standard within the contract for referrals</inlineHelpText>
    <label>Referral Payment % Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>