force-app/main/default/objects/Referral_Account__c/fields/BypassHoldOut__c.field-meta.xml
<CustomField>
    <fullName>BypassHoldOut__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If you want to change the owner while the hold out is set, change this flag to true as part of the transaction.</description>
    <label>Bypass Hold Out</label>
    <type>Checkbox</type>
</CustomField>