force-app/main/default/objects/Referral_Account__c/fields/CheckSensitivityList__c.field-meta.xml
<CustomField>
    <fullName>CheckSensitivityList__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check the Sensitivity List on all of the attached Accounts</inlineHelpText>
    <label>Check Sensitivity List</label>
    <type>Checkbox</type>
</CustomField>