force-app/main/default/objects/Referral_Account__c/fields/Client_Satisfaction_Rating__c.field-meta.xml
<CustomField>
    <fullName>Client_Satisfaction_Rating__c</fullName>
    <description>Rating based on the client&apos;s answer to the following survey question: ‘How likely are you to recommend Paychex products and services to a friend, colleague, or client?’ 
Promoters (score 9-10) are loyal enthusiasts who will keep buying and refer others, fueling growth; 
Passives (score 7-8) are satisfied but unenthusiastic customers who are vulnerable to competitive offerings; 
Detractors (score 0-6) are unhappy customers who can damage your brand and impede growth through negative word-of-mouth.</description>
    <inlineHelpText>Rating based on the client or firm’s answer to the following survey question: ‘How likely are you to recommend company products and services to a friend, colleague, or client?’</inlineHelpText>
    <label>NPS Score</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Promoter</fullName>
            </value>
            <value>
                <fullName>Passive</fullName>
            </value>
            <value>
                <fullName>Detractor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>