force-app/main/default/objects/Referral_Account__c/fields/Common_Remitter_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Common_Remitter_Start_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Common Remitter Start Date</label>
    <type>Date</type>
</CustomField>