force-app/main/default/objects/Referral_Account__c/fields/Contract_Expired__c.field-meta.xml
<CustomField>
    <fullName>Contract_Expired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contract Expired?</label>
    <type>Checkbox</type>
</CustomField>