force-app/main/default/objects/Referral_Account__c/fields/Count_of_Referral_Account_Team__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Referral_Account_Team__c</fullName>
    <description>Number of Referral Account Team Members related to a given referral account.  Used for Dedicated Rep team</description>
    <label>Count of Referral Account Team Members</label>
    <summaryForeignKey>Referral_Account_Team__c.Referral_Account__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>