force-app/main/default/objects/Referral_Account__c/fields/CPA_Program_Status__c.field-meta.xml
<CustomField>
    <fullName>CPA_Program_Status__c</fullName>
    <label>CPA Program Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Invited</fullName>
            </value>
            <value>
                <fullName>Enrolled</fullName>
            </value>
            <value>
                <fullName>No Longer In Program</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>