force-app/main/default/objects/Referral_Account__c/fields/CPE_Interested__c.field-meta.xml
<CustomField>
    <fullName>CPE_Interested__c</fullName>
    <label>CPE-Interested</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>401(k): A Retirement Plan Option</fullName>
            </value>
            <value>
                <fullName>Business Entities and Emp Benefits</fullName>
            </value>
            <value>
                <fullName>Employee/Independent Contractor</fullName>
            </value>
            <value>
                <fullName>Exempt/Non-Exempt – Id Emp Class</fullName>
            </value>
            <value>
                <fullName>Fringe Benefits</fullName>
            </value>
            <value>
                <fullName>Health Care Reform</fullName>
            </value>
            <value>
                <fullName>Health Savings Accounts</fullName>
            </value>
            <value>
                <fullName>How to Incorporate a Section 125 Plan</fullName>
            </value>
            <value>
                <fullName>Introduction to Business Ethics</fullName>
            </value>
            <value>
                <fullName>Managing Human Resource Issues</fullName>
            </value>
            <value>
                <fullName>P/R Taxes- Household Employees</fullName>
            </value>
            <value>
                <fullName>P/R Taxes- New Business Start-Ups</fullName>
            </value>
            <value>
                <fullName>P/R Taxes- Resident and Nonres Aliens</fullName>
            </value>
            <value>
                <fullName>Restaurant Payrolls</fullName>
            </value>
            <value>
                <fullName>Roth 401(k) Contribution</fullName>
            </value>
            <value>
                <fullName>State Unemployment Insurance (SUI)</fullName>
            </value>
            <value>
                <fullName>Workers’ Compensation Insurance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>