force-app/main/default/objects/Referral_Account__c/fields/CSOrgId__c.field-meta.xml
<CustomField>
    <fullName>CSOrgId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CS Org ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>