force-app/main/default/objects/Referral_Account__c/fields/DedicatedRepChanged__c.field-meta.xml
<CustomField>
    <fullName>DedicatedRepChanged__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Did the dedicated rep change? If this is true, the daily batch job will pick up this record for ownership processing.</inlineHelpText>
    <label>Dedicated Rep Changed</label>
    <type>Checkbox</type>
</CustomField>