force-app/main/default/objects/Referral_Account__c/fields/Does_Firm_Refer_Benefit_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Does_Firm_Refer_Benefit_Opportunities__c</fullName>
    <description>CPA Profile Strategy Field per case : 23185117</description>
    <inlineHelpText>Does the firm refer benefit opportunities or handle in-house?</inlineHelpText>
    <label>Does Firm Refer Benefit Opportunities</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Refer</fullName>
            </value>
            <value>
                <fullName>In House</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>