force-app/main/default/objects/Referral_Account__c/fields/End_Date_Reason__c.field-meta.xml
<CustomField>
    <fullName>End_Date_Reason__c</fullName>
    <label>End Date Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bad lead</fullName>
            </value>
            <value>
                <fullName>Does not want to partner</fullName>
            </value>
            <value>
                <fullName>Do Not Call</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Merged</fullName>
            </value>
            <value>
                <fullName>Not interested</fullName>
            </value>
            <value>
                <fullName>Out of Business</fullName>
            </value>
            <value>
                <fullName>Sold Business</fullName>
            </value>
            <value>
                <fullName>Unable to determine</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>