force-app/main/default/objects/Referral_Account__c/fields/EvaluateCadence__c.field-meta.xml
<CustomField>
    <fullName>EvaluateCadence__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Evaluate the cadence fields (In Cadence, Cadence Type...)</inlineHelpText>
    <label>Evaluate Cadence</label>
    <type>Checkbox</type>
</CustomField>