force-app/main/default/objects/Referral_Account__c/fields/External_Wholesaler_Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>External_Wholesaler_Account_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>External Wholesaler Account Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Referral_Accounts3</relationshipName>
    <type>Lookup</type>
</CustomField>