force-app/main/default/objects/Referral_Account__c/fields/Federal_ID_Number__c.field-meta.xml
<CustomField>
    <fullName>Federal_ID_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Federal ID Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>