force-app/main/default/objects/Referral_Account__c/fields/FY17_Referred_Sales_Decline_Reason__c.field-meta.xml
<CustomField>
    <fullName>FY17_Referred_Sales_Decline_Reason__c</fullName>
    <description>For firms that no longer refer Paychex, DSMs will be contacting those firms to determine why they no longer refer.</description>
    <inlineHelpText>Why doesn’t the firm refer Paychex? Seeking to understand why and for what reasons they refer their current Payroll/HCM vendor</inlineHelpText>
    <label>Why does CPA refer these vendors?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Relationship</fullName>
            </value>
            <value>
                <fullName>Reporting</fullName>
            </value>
            <value>
                <fullName>Technology</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Financial Referral Arrangement (Rev Share or other similar program)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>