force-app/main/default/objects/Referral_Account__c/fields/Group__c.field-meta.xml
<CustomField>
    <fullName>Group__c</fullName>
    <description>Changed from CPA Roation to Rotation based on clearslide req.</description>
    <label>Rotation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Annual</fullName>
            </value>
            <value>
                <fullName>Bi-Weekly</fullName>
            </value>
            <value>
                <fullName>BW - Week 1 &amp; Week 3</fullName>
            </value>
            <value>
                <fullName>BW - Week 2 &amp; Week 4</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Multi-Touch (Steady)</fullName>
                <label>Multi-Touch</label>
            </value>
            <value>
                <fullName>Not Interested</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>