force-app/main/default/objects/Referral_Account__c/fields/Has_Sensitivity_Payroll__c.field-meta.xml
<CustomField>
    <fullName>Has_Sensitivity_Payroll__c</fullName>
    <formula>false</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Sensitivity-Payroll</label>
    <type>Checkbox</type>
</CustomField>