force-app/main/default/objects/Referral_Account__c/fields/Have_Endorsement_Letter__c.field-meta.xml
<CustomField>
    <fullName>Have_Endorsement_Letter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Have Endorsement Letter?</label>
    <type>Checkbox</type>
</CustomField>