force-app/main/default/objects/Referral_Account__c/fields/HNBF_Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>HNBF_Account_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>HNBF Account Owner</description>
    <label>HNBF Account Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Referral_Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>