force-app/main/default/objects/Referral_Account__c/fields/Hold_Out_Expiration__c.field-meta.xml
<CustomField>
    <fullName>Hold_Out_Expiration__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Hold Out Expiration</label>
    <type>Date</type>
</CustomField>