force-app/main/default/objects/Referral_Account__c/fields/Hold_Out_Reason__c.field-meta.xml
<CustomField>
    <fullName>Hold_Out_Reason__c</fullName>
    <description>36704795</description>
    <label>Hold Out Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Centric Rep</fullName>
            </value>
            <value>
                <fullName>CPA Ownership Outside Channel - Approved</fullName>
            </value>
            <value>
                <fullName>Crossover</fullName>
            </value>
            <value>
                <fullName>MMS Ownership</fullName>
            </value>
            <value>
                <fullName>Multicultural Rep</fullName>
            </value>
            <value>
                <fullName>Strategic Ownership</fullName>
            </value>
            <value>
                <fullName>Temporary - LOA</fullName>
            </value>
            <value>
                <fullName>Temporary - Open Territory</fullName>
            </value>
            <value>
                <fullName>Territory Exception - Continuity of Relationship</fullName>
            </value>
            <value>
                <fullName>Territory Exception - Personal Relationship</fullName>
            </value>
            <value>
                <fullName>Territory Exception - Seniority</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>