force-app/main/default/objects/Referral_Account__c/fields/How_many_401_k_Plans__c.field-meta.xml
<CustomField>
    <fullName>How_many_401_k_Plans__c</fullName>
    <label>How many 401(k) Plans</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1-5</fullName>
            </value>
            <value>
                <fullName>6-10</fullName>
            </value>
            <value>
                <fullName>11-20</fullName>
            </value>
            <value>
                <fullName>21+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>