force-app/main/default/objects/Referral_Account__c/fields/HRS_Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>HRS_Account_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>HRS Account Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>R00N70000002EpRLEA0</relationshipName>
    <type>Lookup</type>
</CustomField>