force-app/main/default/objects/Referral_Account__c/fields/In_Cadence__c.field-meta.xml
<CustomField>
    <fullName>In_Cadence__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is this record actively in a cadence?</inlineHelpText>
    <label>In Cadence</label>
    <type>Checkbox</type>
</CustomField>