force-app/main/default/objects/Referral_Account__c/fields/Internal_Wholesaler_Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Internal_Wholesaler_Account_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Internal Wholesaler Account Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Referral_Accounts2</relationshipName>
    <type>Lookup</type>
</CustomField>