force-app/main/default/objects/Referral_Account__c/fields/Is_the_firm_hosting__c.field-meta.xml
<CustomField>
    <fullName>Is_the_firm_hosting__c</fullName>
    <label>Is the firm hosting?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>