force-app/main/default/objects/Referral_Account__c/fields/Last_Event_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Event_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Shows latest Event Date across all Referral Contacts</inlineHelpText>
    <label>Last Event Date</label>
    <type>Date</type>
</CustomField>