force-app/main/default/objects/Referral_Account__c/fields/Lead_List__c.field-meta.xml
<CustomField>
    <fullName>Lead_List__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Lead List</label>
    <type>TextArea</type>
</CustomField>