force-app/main/default/objects/Referral_Account__c/fields/LoadDedicatedRep__c.field-meta.xml
<CustomField>
    <fullName>LoadDedicatedRep__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The email address or SFDC Id of the contact record of the dedicated rep on this record.</inlineHelpText>
    <label>Load Dedicated Rep</label>
    <length>100</length>
    <type>Text</type>
</CustomField>