force-app/main/default/objects/Referral_Account__c/fields/Lost_Client_Review__c.field-meta.xml
<CustomField>
    <fullName>Lost_Client_Review__c</fullName>
    <label>Lost Client Review</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>