force-app/main/default/objects/Referral_Account__c/fields/MACleanPostalCode__c.field-meta.xml
<CustomField>
    <fullName>MACleanPostalCode__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Clean Postal Code (MapAnything)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>