force-app/main/default/objects/Referral_Account__c/fields/MACleanStreet__c.field-meta.xml
<CustomField>
    <fullName>MACleanStreet__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Clean Street (MapAnything)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>