force-app/main/default/objects/Referral_Account__c/fields/Managed_by_Channel__c.field-meta.xml
<CustomField>
    <fullName>Managed_by_Channel__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Managed by Channel</label>
    <type>Checkbox</type>
</CustomField>