force-app/main/default/objects/Referral_Account__c/fields/MMS_Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>MMS_Account_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>MMS rep who is assigned to this referral account</description>
    <inlineHelpText>MMS rep who is assigned to this referral account</inlineHelpText>
    <label>MMS Account Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Referral_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>