force-app/main/default/objects/Referral_Account__c/fields/MutualClientTier__c.field-meta.xml
<CustomField>
    <fullName>MutualClientTier__c</fullName>
    <inlineHelpText>Which tier does the mutual client count fall into?</inlineHelpText>
    <label>Accountant Program Tier</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Core</fullName>
            </value>
            <value>
                <fullName>Signature</fullName>
            </value>
            <value>
                <fullName>Elite</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>