force-app/main/default/objects/Referral_Account__c/fields/NameForDuplicateManagement__c.field-meta.xml
<CustomField>
    <fullName>NameForDuplicateManagement__c</fullName>
    <description>Salesforce&apos;s Duplicate Management doesn&apos;t seem to be able to do a fuzzy match on the standard name field, so we copy the name into here so the fuzzy match can be performed.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>A copy of the Referral Account Name field</inlineHelpText>
    <label>Name For Duplicate Management</label>
    <length>120</length>
    <type>Text</type>
</CustomField>