force-app/main/default/objects/Referral_Account__c/fields/Number_of_Clients_With_a_Payroll_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Clients_With_a_Payroll_Vendor__c</fullName>
    <description>Used to determine how many of a firm’s clients are currently using a payroll vendor</description>
    <label>Number of Clients With a Payroll Vendor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1-5</fullName>
            </value>
            <value>
                <fullName>6-10</fullName>
            </value>
            <value>
                <fullName>11-20</fullName>
            </value>
            <value>
                <fullName>21-50</fullName>
            </value>
            <value>
                <fullName>51-100</fullName>
            </value>
            <value>
                <fullName>101+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>