force-app/main/default/objects/Referral_Account__c/fields/Number_of_Live_Payrolls_Firm_Processes__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Live_Payrolls_Firm_Processes__c</fullName>
    <description>Used to determine how many payrolls a firm currently processes themselves.</description>
    <label>Number of Live Payrolls Firm Processes</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1-5</fullName>
            </value>
            <value>
                <fullName>6-10</fullName>
            </value>
            <value>
                <fullName>11-20</fullName>
            </value>
            <value>
                <fullName>21-50</fullName>
            </value>
            <value>
                <fullName>51-100</fullName>
            </value>
            <value>
                <fullName>101-200</fullName>
            </value>
            <value>
                <fullName>201+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>