force-app/main/default/objects/Referral_Account__c/fields/Original_Contract_Date__c.field-meta.xml
<CustomField>
    <fullName>Original_Contract_Date__c</fullName>
    <description>Manually entered by the channel managers</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>What is the orignal contract date for this Referral Account?</inlineHelpText>
    <label>Original Contract Date</label>
    <type>Date</type>
</CustomField>