force-app/main/default/objects/Referral_Account__c/fields/Overall_System_Health__c.field-meta.xml
<CustomField>
    <fullName>Overall_System_Health__c</fullName>
    <label>Overall System Health</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Red</fullName>
            </value>
            <value>
                <fullName>Yellow</fullName>
            </value>
            <value>
                <fullName>Green</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>