force-app/main/default/objects/Referral_Account__c/fields/Parent_Referral_Account__c.field-meta.xml
<CustomField>
    <fullName>Parent_Referral_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Referral Account</label>
    <referenceTo>Referral_Account__c</referenceTo>
    <relationshipLabel>Child Referral Accounts</relationshipLabel>
    <relationshipName>Referral_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>