force-app/main/default/objects/Referral_Account__c/fields/PartnerId__c.field-meta.xml
<CustomField>
    <fullName>PartnerId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Unique id that identifies the parent in a referral relationship.</inlineHelpText>
    <label>Vendor Id</label>
    <length>15</length>
    <type>Text</type>
</CustomField>