force-app/main/default/objects/Referral_Account__c/fields/Premier_PBS_Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Premier_PBS_Account_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>HR Services Account Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>R00N70000002EpRMEA0</relationshipName>
    <type>Lookup</type>
</CustomField>