force-app/main/default/objects/Referral_Account__c/fields/ProcessNotes__c.field-meta.xml
<CustomField>
    <fullName>ProcessNotes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Any notes of what happens during processing of this record.</inlineHelpText>
    <label>Process Notes</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>