force-app/main/default/objects/Referral_Account__c/fields/Program_Calibration_Potential_Score__c.field-meta.xml
<CustomField>
    <fullName>Program_Calibration_Potential_Score__c</fullName>
    <label>Program Calibration: Potential Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>