force-app/main/default/objects/Referral_Account__c/fields/RC_Number__c.field-meta.xml
<CustomField>
    <fullName>RC_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>RC Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>