force-app/main/default/objects/Referral_Account__c/fields/Referral_Count__c.field-meta.xml
<CustomField>
    <fullName>Referral_Count__c</fullName>
    <description>The number of sold referrals in the past 12 months.</description>
    <inlineHelpText>The number of sold referrals in the past 12 months.</inlineHelpText>
    <label>Referral Count</label>
    <summarizedField>Referral_Counter__c.X1_Year_Sold__c</summarizedField>
    <summaryForeignKey>Referral_Counter__c.Referral_Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>