force-app/main/default/objects/Referral_Account__c/fields/Referral_Payment_Agreement_Sent__c.field-meta.xml
<CustomField>
    <fullName>Referral_Payment_Agreement_Sent__c</fullName>
    <description>Case #26919518 field will be managed by Jody Slaven to track agreements that have been sent to referral source and are pending signature</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Date the agreement was sent via DocuSign to the partner</inlineHelpText>
    <label>Referral Payment Agreement Sent</label>
    <type>Date</type>
</CustomField>